--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 *{
-    font-family: "Open Sans"
+    font-family: "Open Sans";
+}
+body{
+    padding: 20px 60px;
+
+}
+a{
+    text-decoration: none;
+    color: black
 }
